# gui-git-editor

./: .gitignore  AGENTS.md  README.md  biome.json  biome.jsonc  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.app.json  tsconfig.node.json  update-version.js  vitest.config.ts
.github/workflows/: release.yml
scripts/: bump-version.sh  release-tag.sh  set-editor-dev.sh  set-editor-release.sh  set-editor-vscode.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: codex.rs  commit.rs  commit_diff.rs  file.rs  merge.rs  mod.rs  rebase.rs  staging.rs
src-tauri/src/parser/: commit.rs  conflict.rs  detector.rs  mod.rs  rebase.rs
src/components/commit/: BodyTextarea.test.tsx  BodyTextarea.tsx  CommitEditor.test.tsx  CommitEditor.tsx  FileDiffViewer.test.tsx  FileDiffViewer.tsx  FileList.test.tsx  FileList.tsx  FileStatusBadge.test.tsx  FileStatusBadge.tsx  StagingArea.tsx  SubjectInput.test.tsx  SubjectInput.tsx  TrailersDisplay.test.tsx  TrailersDisplay.tsx  index.ts
src/components/common/: ActionBar.test.tsx  ActionBar.tsx  BackupRecoveryDialog.test.tsx  BackupRecoveryDialog.tsx  ErrorDisplay.test.tsx  ErrorDisplay.tsx  Loading.tsx  index.ts
src/components/fallback/: FallbackEditor.tsx  index.ts
src/components/merge/: CodexResolveButton.test.tsx  CodexResolveButton.tsx  ConflictActions.test.tsx  ConflictActions.tsx  ConflictNavigator.test.tsx  ConflictNavigator.tsx  MergeActionBar.test.tsx  MergeActionBar.tsx  MergeEditor.test.tsx  MergeEditor.tsx  MonacoPanel.tsx  index.ts  useBlameDecorations.ts  useConflictDecorations.ts  useSidePanelConflictDecorations.ts
src/hooks/: index.ts  useAutoBackup.test.ts  useAutoBackup.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMergeKeyboardShortcuts.test.ts  useMergeKeyboardShortcuts.ts
src/stores/: commitDiffStore.test.ts  commitDiffStore.ts  commitStore.test.ts  commitStore.ts  fileStore.test.ts  fileStore.ts  historyStore.test.ts  historyStore.ts  index.ts  mergeStore.test.ts  mergeStore.ts  rebaseStore.test.ts  rebaseStore.ts  stagingStore.test.ts  stagingStore.ts  themeStore.test.ts  themeStore.ts
src/test/: setup.ts
src/types/: errors.test.ts  errors.ts  git.ts  index.ts  ipc.test.ts  ipc.ts
src/utils/: mergeConflictState.test.ts  mergeConflictState.ts  platform.test.ts  platform.ts  rebase.test.ts  rebase.ts
(+13 files in other folders)
