[package]
name = "gui-git-editor"
version = "25.12.104"
description = "GUI Git Editor - A visual editor for Git operations"
authors = ["owa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gui_git_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-cli = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-log = "2.7.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["process"] }
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"
