[package]
name = "gui-git-editor"
version = "26.3.100"
description = "GUI Git Editor - A visual editor for Git operations"
authors = ["owa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gui_git_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-cli = "2.4.1"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["process"] }
uuid = { version = "1.23.0", features = ["v4"] }
base64 = "0.22.1"
